--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/content_desc_settings"
-                        app:icon="@drawable/settings_24px" />
+                        app:icon="@drawable/round_settings_24" />
 
 
                 </com.google.android.material.overflow.OverflowLinearLayout>
