--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
         
@@ -26,26 +26,26 @@
 
           <us.smailbarkouch.android_breadcrumb.BreadCrumbView
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_weight="1"/>
+              android:layout_height="wrap_content"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="116dp"
+            android:layout_height="128dp"
             android:layout_gravity="bottom"
             android:gravity="center"
-            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
-            tools:ignore="ObsoleteLayoutParam,UselessLeaf">
+            android:orientation="horizontal"
+            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior">
 
             <com.google.android.material.floatingtoolbar.FloatingToolbarLayout
+                style="?attr/floatingToolbarVibrantStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="-14dp"
                 android:layout_marginEnd="12dp"
-                app:layout_behavior="com.google.android.material.behavior.HideViewOnScrollBehavior"
-                style="?attr/floatingToolbarVibrantStyle">
+              >
 
                 <com.google.android.material.overflow.OverflowLinearLayout
                     android:id="@+id/floating_toolbar_child_bottom"
@@ -53,6 +53,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:orientation="horizontal">
+
                     <Button
                         android:id="@+id/floating_toolbar_vibrant_button_bold"
                         style="?attr/materialIconButtonStyle"
@@ -61,25 +62,28 @@
                         android:checkable="true"
                         android:contentDescription="@string/content_desc_back"
                         app:icon="@drawable/rounded_arrow_back_ios_new_24" />
+
                     <Button
-                        style="?attr/materialIconButtonStyle"
                         android:id="@+id/floating_toolbar_vibrant_button_italic"
+                        style="?attr/materialIconButtonStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:checkable="true"
                         android:contentDescription="@string/content_desc_forward"
                         app:icon="@drawable/rounded_arrow_forward_ios_24" />
+
                     <Button
-                        style="?attr/materialIconButtonStyle"
                         android:id="@+id/floating_toolbar_vibrant_button_underlined"
+                        style="?attr/materialIconButtonStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:checkable="true"
                         android:contentDescription="@string/content_desc_select"
                         app:icon="@drawable/round_done_all_24" />
+
                     <Button
-                        style="?attr/materialIconButtonStyle"
                         android:id="@+id/floating_toolbar_vibrant_button_settings"
+                        style="?attr/materialIconButtonStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/content_desc_settings"
@@ -93,9 +97,10 @@
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fab"
                 android:layout_width="wrap_content"
-                android:layout_height="151dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:contentDescription="@string/create"
-                app:fabCustomSize="57dp"
+                app:fabCustomSize="63dp"
                 app:materialThemeOverlay="@style/ThemeOverlay.Material3Expressive.FloatingActionButton.TertiaryContainer"
                 app:srcCompat="@drawable/rounded_add_24" />
 
