--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
           <us.smailbarkouch.android_breadcrumb.BreadCrumbView
@@ -36,6 +37,7 @@
             android:layout_height="128dp"
             android:layout_gravity="bottom"
             android:gravity="center"
+            android:fitsSystemWindows="true"
             android:orientation="horizontal"
             app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior">
 
@@ -43,8 +45,8 @@
                 style="?attr/floatingToolbarVibrantStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="-14dp"
-                android:layout_marginEnd="12dp"
+                android:elevation="6dp"
+                android:layout_marginEnd="4dp"
               >
 
                 <com.google.android.material.overflow.OverflowLinearLayout
@@ -100,7 +102,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:contentDescription="@string/create"
-                app:fabCustomSize="63dp"
+                app:fabSize="auto"
+                app:fabCustomSize="58dp"
                 app:materialThemeOverlay="@style/ThemeOverlay.Material3Expressive.FloatingActionButton.TertiaryContainer"
                 app:srcCompat="@drawable/rounded_add_24" />
 
